Update styling a bit.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="theme-base-08 layout-reverse">
+  <body class="theme-base-08">
 
     <header class="masthead">
       <h1>{{ site.title }}</h1>
@@ -18,7 +18,7 @@
               <a href="/atom.xml">RSS Feed</a>
             </li>
           </ul>
-          <p>&copy; 2014. {{ site.author.name }} All rights reserved.</p>
+          <p>&copy; 2016. {{ site.author.name }} All rights reserved.</p>
         </div>
       </div>
     </header>
